# EZPlayer

./: README.md
3rd/angle/: build_angle.bat
3rd/angle/libs/Release/: libEGL.dll.lib  libGLESv2.dll.lib  zlib.dll.lib
3rd/ffmpeg/x64/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
3rd/spdlog/details/: file_helper-inl.h  file_helper.h
3rd/spdlog/sinks/: basic_file_sink-inl.h  basic_file_sink.h
Core/: CMakeLists.txt
Core/Interface/: CoreInterface.cpp  CoreInterface.h
Core/Src/: CoreManger.cpp  CoreManger.h  PlayCore.cpp  PlayCore.h
Core/Src/Decode/: FFAudioDecoder.cpp  FFAudioDecoder.h  FFBaseDecoder.cpp  FFBaseDecoder.h  FFUtils.cpp  FFUtils.h  FFVideoDecoder.cpp  FFVideoDecoder.h  GPUDeviceManger.cpp  GPUDeviceManger.h
Core/Src/OClock/: OClock.cpp  OClock.h
Core/Src/Render/: BMPImageRender.cpp  BMPImageRender.h  D3D11DXRender.cpp  D3D11DXRender.h  D3D11NV12ToRGBARender.cpp  D3D11NV12ToRGBARender.h  NV12ToRGBARender.cpp  NV12ToRGBARender.h  VideoBaseRender.cpp  VideoBaseRender.h  YUV420PToRGBARender.cpp  YUV420PToRGBARender.h
Core/Src/Render/Audio/: AudioPlayer.cpp  AudioPlayer.h
Core/Src/Render/Shader/: PixelShader.h  PixelShader.hlsl  TexturePixelShader.h  TexturePixelShader.hlsl  TextureVertexShader.h  TextureVertexShader.hlsl  VertexShader.h  VertexShader.hlsl
Core/Src/Utils/: RenderUtils.cpp  RenderUtils.h
Core/Version/: version.rc
Gui/: CMakeLists.txt  qt_project_template.cmake
Gui/Framework/: CMakeLists.txt  Framework.qrc
Gui/Framework/Main/: main.cpp  mainPrivate.h
Gui/Framework/Main/Application/: CustomApplication.cpp  CustomApplication.h
Gui/Framework/Main/MainWindow/ViewModels/: MainWindowViewModel.cpp  MainWindowViewModel.h  PlayerViewModel.cpp  PlayerViewModel.h  PlayerWindow.cpp  PlayerWindow.h
Gui/Framework/Main/MainWindow/Views/: MainWindow.qml  MediaInfoDlg.qml  Player.qml  TitleBar.qml
Gui/Framework/Utils/: CreateQMLObj.cpp  CreateQMLObj.h  DefineQMLList.h  RegisterModel.h
Gui/Framework/Version/: version.rc
Gui/GUIKit/: CMakeLists.txt  GUIKit.qrc  GUIKitInterface.cpp  GUIKitInterface.h  qmldir
Gui/GUIKit/Button/: GUIButton.qml  GUIImageButton.qml
Gui/GUIKit/Color/: GUIColor.h
Gui/GUIKit/Font/: GUIFont.h
Gui/GUIKit/Version/: version.rc
Launcher/: CMakeLists.txt
Launcher/Src/: main.cpp
Launcher/Version/: version.aps  version.rc
Log/: CMakeLists.txt
Log/Interface/: EZLogInterface.cpp  EZLogInterface.h
Log/Src/: EZLogWraper.cpp  EZLogWraper.h
Log/Version/: version.rc
Setup/: make_installer.bat
Utils/: CMakeLists.txt
Utils/Src/CodeScope/: ScopeGuard.cpp  ScopeGuard.h
Utils/Src/Singleton/: Singleton.h
Utils/Src/String/: StringUtils.cpp  StringUtils.h
Utils/Src/Thread/: TaskThread.cpp  TaskThread.h
Utils/Src/Time/: TimeUtils.cpp  TimeUtils.h
proj/cmake/: CMakeLists.txt  config_version.cmake
proj/cmake/windows/: make_proj.bat
proj/cmake/windows/Version/: cmake_version.rc.in  cmake_version_withico.rc.in
